# templeofduckie

./: .syncthing.'.tmp  .syncthing..gitignore.tmp  .syncthing.build.sh.tmp  .syncthing.winbuild.sh.tmp  CMakeLists.txt  README.md  compile_commands.json  credits.txt  imgui.ini  minimal.html
img/: .syncthing.diedbackground.png.tmp  .syncthing.panel.png.tmp
img/ldtk/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-01_22-07-52/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-01_22-07-59/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-01_22-08-04/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-01_22-08-06/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-01_22-08-08/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-01_22-08-11/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-01_22-08-27/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-01_22-11-29/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_10-03-49/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_10-04-04/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_17-34-37/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-07-54/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-07-57/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-08-00/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-08-13/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-09-04/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-09-14/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-09-17/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-09-20/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-41-48/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-42-02/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-43-50/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-45-42/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-02_20-50-08/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-03_16-01-31/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-03_16-05-45/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-03_16-08-28/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-03_16-09-02/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-04_08-53-19/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-04_09-10-43/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-04_13-55-41/: ldtk.ldtk
img/ldtk/ldtk/backups/78b3fcb0-b0a0-11ee-b472-53749cbbaa02_2024-03-04_13-56-54/: ldtk.ldtk
img/sound/: .syncthing.hurt2.wav.tmp  .syncthing.hurt3.wav.tmp  .syncthing.moo.wav.tmp  .syncthing.zombie1.wav.tmp
src/: AbilityComponents.h  AbilityData.h  ItemPanel.h  Player.h  main.cpp  main.sync-conflict-20240228-201408-Z6ENONT.cpp
(+1 files in other folders)
